--- a/.github/workflows/release-extension.yml
+++ b/.github/workflows/release-extension.yml
@@ -42,6 +42,7 @@ jobs:
         run: |
           IMAGE=${{ env.REGISTRY }}/${{ github.repository }}-extension:${{ github.ref_name }}
           cd extension
+          docker build --no-cache --build-arg=PHP_VERSION=8.5 -t ${IMAGE}-php8.5-${{ matrix.arch }} .
           docker build --no-cache --build-arg=PHP_VERSION=8.4 -t ${IMAGE}-php8.4-${{ matrix.arch }} .
           docker build --no-cache --build-arg=PHP_VERSION=8.3 -t ${IMAGE}-php8.3-${{ matrix.arch }} .
           docker build --no-cache --build-arg=PHP_VERSION=8.2 -t ${IMAGE}-php8.2-${{ matrix.arch }} .
@@ -49,10 +50,10 @@ jobs:
       - name: ☁️ Push
         run: |
           IMAGE=${{ env.REGISTRY }}/${{ github.repository }}-extension:${{ github.ref_name }}
+          docker push ${IMAGE}-php8.5-${{matrix.arch}}
           docker push ${IMAGE}-php8.4-${{matrix.arch}}
           docker push ${IMAGE}-php8.3-${{matrix.arch}}
           docker push ${IMAGE}-php8.2-${{matrix.arch}}
-
   manifest:
     name: Manifest
     runs-on: ubuntu-latest
@@ -75,6 +76,8 @@ jobs:
       - name: ☁️ Push
         run: |
           IMAGE=${{ env.REGISTRY }}/${{ github.repository }}-extension:${{ github.ref_name }}
+          docker manifest create ${IMAGE}-php8.5 --amend ${IMAGE}-php8.5-arm64 --amend ${IMAGE}-php8.5-amd64
+          docker manifest push ${IMAGE}-php8.5
           docker manifest create ${IMAGE}-php8.4 --amend ${IMAGE}-php8.4-arm64 --amend ${IMAGE}-php8.4-amd64
           docker manifest push ${IMAGE}-php8.4
           docker manifest create ${IMAGE}-php8.3 --amend ${IMAGE}-php8.3-arm64 --amend ${IMAGE}-php8.3-amd64
