--- a/.github/workflows/build-extension.yml
+++ b/.github/workflows/build-extension.yml
@@ -16,16 +16,23 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
+        os: [ubuntu-latest, ubuntu-24.04-arm]
+        php: ["8.2", "8.3", "8.4", "8.5"]
         include:
           - os: ubuntu-latest
             arch: amd64
-          - os: ubuntu-24.04-arm 
+          - os: ubuntu-24.04-arm
             arch: arm64
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Build and push
+
+      - name: Build
         run: |
-            IMAGE=${{ env.REGISTRY }}/${{ github.repository }}:latest
-            docker build -t ${IMAGE}-${{matrix.arch}} --build-arg=PHP_VERSION=8.4 extension
+          IMAGE=${{ env.REGISTRY }}/${{ github.repository }}:latest
+          docker build \
+            -t ${IMAGE}-php${{ matrix.php }}-${{ matrix.arch }} \
+            --build-arg=PHP_VERSION=${{ matrix.php }} \
+            extension\
