--- a/tracing/cli/Dockerfile
+++ b/tracing/cli/Dockerfile
@@ -1,39 +1,40 @@
-FROM alpine:3.22 AS build
+FROM from_image AS build
 
-USER root
+  USER root
 
-RUN apk add alpine-sdk \
-            bash \
-            bpftool \
-            clang \
-            clang-dev \
-            curl \
-            git \
-            libbpf-dev \
-            linux-headers \
-            llvm
+  RUN apk add alpine-sdk \
+              bash \
+              bpftool \
+              clang \
+              clang-dev \
+              curl \
+              git \
+              libbpf-dev \
+              linux-headers \
+              llvm
 
-ENV MISE_DATA_DIR="/mise"
-ENV MISE_CONFIG_DIR="/mise"
-ENV MISE_CACHE_DIR="/mise/cache"
-ENV MISE_INSTALL_PATH="/usr/local/bin/mise"
-ENV PATH="/mise/shims:$PATH"
+  ENV MISE_DATA_DIR="/mise"
+  ENV MISE_CONFIG_DIR="/mise"
+  ENV MISE_CACHE_DIR="/mise/cache"
+  ENV MISE_INSTALL_PATH="/usr/local/bin/mise"
+  ENV PATH="/mise/shims:$PATH"
 
-RUN curl https://mise.run | sh
+  RUN curl https://mise.run | sh
 
-# Make libclang easy to find for bindgen
-ENV LIBCLANG_PATH=/usr/lib/llvm19/lib
+  # Make libclang easy to find for bindgen
+  ENV LIBCLANG_PATH=/usr/lib/llvm19/lib
 
-ENV GOFLAGS=-buildvcs=false
+  ENV GOFLAGS=-buildvcs=false
 
-WORKDIR /data
-ADD --chown=skpr:skpr . /data
+  WORKDIR /data
+  ADD --chown=skpr:skpr . /data
 
-# Check and build.
-RUN mise trust .
-RUN mise run build:cli
+  # Check and build.
+  RUN mise trust .
+  RUN mise run build:cli
 
-FROM alpine:3.22
-RUN apk add bash
-COPY --from=build /data/_output/compass /usr/local/bin/compass
-CMD ["compass"]
+FROM from_image
+
+  RUN apk add bash
+  COPY --from=build /data/_output/compass /usr/local/bin/compass
+  CMD ["compass"]
